--- a/Nostalgia/SongAttributeCell.xib
+++ b/Nostalgia/SongAttributeCell.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="cO0-eq-27y" detailTextLabel="pui-Q4-t1i" style="IBUITableViewCellStyleValue1" id="Ogu-PU-uXJ">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="cO0-eq-27y" detailTextLabel="pui-Q4-t1i" style="IBUITableViewCellStyleValue1" id="Ogu-PU-uXJ" customClass="SongAttributeCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ogu-PU-uXJ" id="IuC-pc-s98">
