--- a/Nostalgia/Base.lproj/Main.storyboard
+++ b/Nostalgia/Base.lproj/Main.storyboard
@@ -485,11 +485,12 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                     <connections>
                         <segue destination="1YS-qy-7fc" kind="relationship" relationship="viewControllers" id="4Wc-IQ-GRI"/>
                         <segue destination="DPV-eT-tG9" kind="relationship" relationship="viewControllers" id="7si-ar-Nx5"/>
+                        <segue destination="MZC-rD-66f" kind="relationship" relationship="viewControllers" id="ZH1-eN-NWo"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vJ3-4V-0oa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1559" y="513"/>
+            <point key="canvasLocation" x="1489" y="846"/>
         </scene>
         <!--FavoritesCVC-->
         <scene sceneID="rgn-16-vHp">
@@ -590,6 +591,47 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eQX-VU-Kzy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2629" y="846"/>
+        </scene>
+        <!--InfoTVC - Root View Controller-->
+        <scene sceneID="d39-EI-uML">
+            <objects>
+                <tableViewController id="OYn-Rd-9Xs" customClass="InfoTVC" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Z5l-iD-asM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="DIp-qk-zHb">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DIp-qk-zHb" id="cG1-tr-XIY">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="6YK-34-TBj"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6LU-n1-qKH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2629" y="1645"/>
+        </scene>
+        <!--Navigation Controller - Item-->
+        <scene sceneID="l6U-tL-q4q">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="MZC-rD-66f" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="yb4-1V-wjY"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Szz-uG-Gk9">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="OYn-Rd-9Xs" kind="relationship" relationship="rootViewController" id="8YX-R3-U1f"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lnc-l7-WEJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2112" y="1645"/>
         </scene>
     </scenes>
     <resources>
