--- a/Nostalgia/Base.lproj/Main.storyboard
+++ b/Nostalgia/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BPo-jH-90O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="BPo-jH-90O">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Sign UpTVC-->
@@ -95,7 +95,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="TimeMachineTVC" id="heq-qP-yz8" customClass="TimeMachineTVC" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="9PJ-8x-PLj">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
@@ -116,7 +116,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="eO5-i4-Fyw" kind="push" identifier="ResultsCVC" id="SWG-C3-HsJ"/>
+                                    <segue destination="bT6-zu-qku" kind="push" identifier="ResultsCVC" id="SWG-C3-HsJ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -129,7 +129,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9B9-Ne-CQu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2629" y="145"/>
+            <point key="canvasLocation" x="2753" y="-1247"/>
         </scene>
         <!--Navigation Controller - Item-->
         <scene sceneID="OXy-UG-AAu">
@@ -150,9 +150,9 @@
         <!--ResultsCVC-->
         <scene sceneID="Ibp-ah-fTc">
             <objects>
-                <collectionViewController autoresizesArchivedViewToFullSize="NO" id="eO5-i4-Fyw" customClass="ResultsCVC" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="ResultsCVC" autoresizesArchivedViewToFullSize="NO" id="eO5-i4-Fyw" customClass="ResultsCVC" sceneMemberID="viewController">
                     <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="cGl-Y1-SoB">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ncb-Iv-K3Y">
@@ -245,7 +245,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="35F-A3-XYQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3094" y="145"/>
+            <point key="canvasLocation" x="3620" y="145"/>
         </scene>
         <!--Song DetailVC-->
         <scene sceneID="VYJ-0s-74L">
@@ -256,15 +256,15 @@
                         <viewControllerLayoutGuide type="bottom" id="3ph-bo-20S"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="bK6-ts-Hih">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="767-photo-1-gray.png" translatesAutoresizingMaskIntoConstraints="NO" id="t0W-mg-o5c">
-                                <rect key="frame" x="146" y="248" width="28" height="23"/>
+                                <rect key="frame" x="146" y="273" width="28" height="23"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B6O-ff-hT5">
-                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B6O-ff-hT5">
+                                <rect key="frame" x="0.0" y="64" width="320" height="505"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xak-Mv-Z2g">
@@ -291,8 +291,8 @@
                                     <constraint firstItem="xak-Mv-Z2g" firstAttribute="top" secondItem="B6O-ff-hT5" secondAttribute="top" id="tLv-yW-54A"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dQx-IB-MR6">
-                                <rect key="frame" x="35" y="413" width="250" height="56"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dQx-IB-MR6">
+                                <rect key="frame" x="35" y="463" width="250" height="56"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tap a Star to Rate" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iar-Nl-35g">
@@ -334,7 +334,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q16-dG-AWI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3529" y="145"/>
+            <point key="canvasLocation" x="4055" y="145"/>
         </scene>
         <!--Date PickerTVC-->
         <scene sceneID="aWZ-LT-ayr">
@@ -470,34 +470,14 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SK2-W3-Qth" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2103" y="145"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="Ox4-CH-rZk">
-            <objects>
-                <tabBarController storyboardIdentifier="TabBarController" automaticallyAdjustsScrollViewInsets="NO" id="EUc-Ft-7Xf" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="E9z-gT-Dfe">
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="1YS-qy-7fc" kind="relationship" relationship="viewControllers" id="4Wc-IQ-GRI"/>
-                        <segue destination="DPV-eT-tG9" kind="relationship" relationship="viewControllers" id="7si-ar-Nx5"/>
-                        <segue destination="MZC-rD-66f" kind="relationship" relationship="viewControllers" id="ZH1-eN-NWo"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vJ3-4V-0oa" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1489" y="846"/>
+            <point key="canvasLocation" x="2227" y="-1247"/>
         </scene>
         <!--FavoritesCVC-->
         <scene sceneID="rgn-16-vHp">
             <objects>
-                <collectionViewController autoresizesArchivedViewToFullSize="NO" id="CVB-dz-tqa" customClass="FavoritesCVC" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="FavoritesCVC" autoresizesArchivedViewToFullSize="NO" id="CVB-dz-tqa" customClass="FavoritesCVC" sceneMemberID="viewController">
                     <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="yd6-3T-ZOA">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="X51-ia-Pjy">
@@ -592,31 +572,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             </objects>
             <point key="canvasLocation" x="2629" y="846"/>
         </scene>
-        <!--InfoTVC - Root View Controller-->
-        <scene sceneID="d39-EI-uML">
-            <objects>
-                <tableViewController id="OYn-Rd-9Xs" customClass="InfoTVC" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Z5l-iD-asM">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="DIp-qk-zHb">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DIp-qk-zHb" id="cG1-tr-XIY">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="6YK-34-TBj"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6LU-n1-qKH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2629" y="1645"/>
-        </scene>
         <!--Navigation Controller - Item-->
         <scene sceneID="l6U-tL-q4q">
             <objects>
@@ -626,12 +581,69 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="OYn-Rd-9Xs" kind="relationship" relationship="rootViewController" id="8YX-R3-U1f"/>
+                        <segue destination="S7o-fW-zGL" kind="relationship" relationship="rootViewController" id="Gjg-87-gqD"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lnc-l7-WEJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2112" y="1645"/>
+        </scene>
+        <!--InfoTVC-->
+        <scene sceneID="aXh-8U-44q">
+            <objects>
+                <viewController storyboardIdentifier="InfoTVC" id="S7o-fW-zGL" customClass="InfoTVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iRo-Si-Vuy"/>
+                        <viewControllerLayoutGuide type="bottom" id="bYU-7b-Co4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PFi-xg-Els">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zji-fZ-fYr">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Zji-fZ-fYr" secondAttribute="trailing" id="HQ7-in-apT"/>
+                            <constraint firstItem="bYU-7b-Co4" firstAttribute="top" secondItem="Zji-fZ-fYr" secondAttribute="bottom" id="YVf-I4-Qum"/>
+                            <constraint firstItem="Zji-fZ-fYr" firstAttribute="leading" secondItem="PFi-xg-Els" secondAttribute="leading" id="dNZ-Bb-Xa8"/>
+                            <constraint firstItem="Zji-fZ-fYr" firstAttribute="top" secondItem="PFi-xg-Els" secondAttribute="top" id="lVD-Xv-buu"/>
+                        </constraints>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" id="Xho-6m-y5M"/>
+                    <connections>
+                        <outlet property="textView" destination="Zji-fZ-fYr" id="gQI-4G-dbD"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gGq-ha-8ZU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2629" y="1645"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Kyo-YI-lxy">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bT6-zu-qku" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="9Ad-KI-Vzb"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yay-Nk-tCG">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="eO5-i4-Fyw" kind="relationship" relationship="rootViewController" id="iOM-OX-eEV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nWU-28-bS1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3094" y="145"/>
         </scene>
     </scenes>
     <resources>
@@ -643,6 +655,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Nkh-X5-XKB"/>
+        <segue reference="c3N-8q-gze"/>
     </inferredMetricsTieBreakers>
 </document>
